# mattermost-tldr

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  LICENSE  Makefile  README.md  config.example.yaml  pyproject.toml  requirements.txt
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  release.yml
examples/: config.example.yaml  prompt.md
src/mattermost_digest/: assistant.py  cli.py
src/mattermost_tldr/: cli.py  client.py  config.py  render.py  summary.py
tests/: conftest.py  test_cli_phases.py  test_client.py  test_config.py  test_date_helpers.py  test_parser.py  test_render.py  test_summary.py
