[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mattermost-tldr"
version = "0.1.0"
description = "Export Mattermost messages to markdown and summarize with AI"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "pyyaml>=6.0",
]

[project.scripts]
mattermost-tldr = "mattermost_tldr.cli:main"

[tool.hatchling.build]
packages = ["src/mattermost_tldr"]
