[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mattermost-tldr"
version = "0.1.0"
description = "Export Mattermost messages to markdown and summarize with AI"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov>=4",
    "ruff>=0.4",
    "mypy>=1.10",
    "black>=24",
    "types-requests>=2.31",
    "types-PyYAML>=6.0",
]

[project.scripts]
mattermost-tldr = "mattermost_tldr.cli:main"

[tool.hatchling.build]
packages = ["src/mattermost_tldr"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=mattermost_tldr --cov-report=term-missing --cov-fail-under=65"

[tool.coverage.run]
source = ["mattermost_tldr"]

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.black]
line-length = 80
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = false
